Fixed(Component, style)[Header]: fixed styling bugs on mobile view

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,12 +6,12 @@
 }
 
 .headerDesktop {
-    @apply hidden xl:block;
+    @apply hidden fixed z-50;
     @apply xl:py-0 xl:text-xl xl:top-0 xl:flex xl:translate-x-0 xl:w-full xl:h-min xl:flex-row xl:items-center bg-transparent01dp xl:justify-between xl:px-[25%];
 }
 
 .sideMenu {
-    @apply flex xl:hidden flex-col fixed top-16 items-start p-4 w-3/4 justify-between h-[92svh] bg-c01dp z-50;
+    @apply flex xl:hidden flex-col fixed top-16 items-start p-4 w-3/4 justify-between h-calc-screen-minus-4rem bg-c01dp z-50;
     transition: all .2s linear;
 }
 
